--- a/.env
+++ b/.env
@@ -4,4 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+POSTGRES_URL="postgres://default:A2IRFjux0Oiv@ep-rough-grass-a2wx1tog-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:A2IRFjux0Oiv@ep-rough-grass-a2wx1tog-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:A2IRFjux0Oiv@ep-rough-grass-a2wx1tog-pooler.eu-central-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:A2IRFjux0Oiv@ep-rough-grass-a2wx1tog.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-rough-grass-a2wx1tog-pooler.eu-central-1.aws.neon.tech"
+POSTGRES_PASSWORD="A2IRFjux0Oiv"
+POSTGRES_DATABASE="verceldb"
